<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iv_logo_text_cont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="Rua Almeida Filho, 1015"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btnRetirar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_retirar_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <Button
        android:id="@+id/btn_entrega"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_entrega_text"
        app:layout_constraintBottom_toBottomOf="@+id/btnRetirar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/btnRetirar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/iv_mercado"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/iv_mercado_text_cont"
        app:layout_constraintEnd_toStartOf="@+id/iv_pizza"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRetirar"
        app:srcCompat="@drawable/mercado" />

    <ImageView
        android:id="@+id/iv_pizza"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/iv_pizza_text_cont"
        app:layout_constraintEnd_toStartOf="@+id/iv_vale"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_mercado"
        app:layout_constraintTop_toBottomOf="@+id/btnRetirar"
        app:srcCompat="@drawable/pizza" />

    <ImageView
        android:id="@+id/iv_vale"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/iv_vale_text_cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_pizza"
        app:layout_constraintTop_toBottomOf="@+id/btnRetirar"
        app:srcCompat="@drawable/vale" />

    <ImageView
        android:id="@+id/iv_destaque"
        android:layout_width="340dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_pizza"
        app:srcCompat="@drawable/destaque" />
</androidx.constraintlayout.widget.ConstraintLayout>